src/css/custom.css
/* ... */
html {
  scrollbar-gutter: stable;
}

:not([data-theme='dark']) body {
  -webkit-font-smoothing: auto;
  -moz-osx-font-smoothing: auto;
}

h1 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 2rem;
  margin-left: -0.05rem;
}

h2 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 1.5rem;
  margin-left: -0.04rem;
}

h3 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 1.25rem;
}

h4 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 1.125rem;
}

h5 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 1.0625rem;
}

h6 {
  font-family: var(--ifm-heading-font-family);
  font-weight: var(--ifm-heading-font-weight);
  font-size: 1rem;
}

header {
  font-family: var(--ifm-heading-font-family);
}

.markdown {
  --ifm-h1-vertical-rhythm-bottom: 1;
  --ifm-heading-vertical-rhythm-bottom: 0.75;
}

.markdown :is(ul, ol) > li > p {
  margin-bottom: var(--ifm-list-paragraph-margin);
}

.blog-wrapper .container {
  max-width: 100%;
  padding: 0 1.25rem;
}

@media (min-width: 90rem) {
  .main-wrapper:not(.full-width),
  .navbar__inner,
  .footer .container,
  .blog-wrapper .container {
    max-width: 90rem;
    margin: auto;
  }
}

@media (min-width: 40rem) {
  .main-wrapper:not(.full-width) {
    & main:not(.blog-wrapper main) {
      padding: 1rem 0 1rem 1rem;
    }

    & .container > .row > :first-child {
      padding-right: 2rem;
    }
  }
}

@media (min-width: 85rem) {
  .main-wrapper:not(.full-width) {
    & main:not(.blog-wrapper main) {
      width: 75rem;
      padding: 1rem 0 2rem 2rem;
    }

    & .container > .row > :first-child {
      padding-right: 3rem;
    }
  }
}

@media (min-width: 95rem) {
  .main-wrapper:not(.full-width) {
    & main:not(.blog-wrapper main) {
      padding: 3rem 0 3rem 4rem;
    }

    & .container > .row > :first-child {
      padding-right: 5rem;
    }
  }
}

.footer {
  border-top: 1px solid var(--ifm-toc-border-color);
}

.navbar {
  padding: 0;
  background-color: transparent;
  box-shadow: none;
  border-bottom: 1px solid var(--ifm-toc-border-color);

  &::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 100%;
    backdrop-filter: blur(12px) saturate(180%);
    background-color: rgba(255, 255, 255, 0.7);
    z-index: -1;
  }

  [data-theme='dark'] &::before {
    background-color: rgba(24, 25, 26, 0.7);
  }

  & div[class*='colorModeToggle'] {
    margin: 0 0.5rem;
  }

  & .DocSearch-Button {
    border-radius: var(--ifm-global-radius);

    & svg {
      width: 16px;
      height: 16px;
    }
  }
}

.navbar__inner {
  padding: var(--ifm-navbar-padding-vertical)
    var(--ifm-navbar-padding-horizontal);
}

.dropdown > .navbar__link:after {
  top: 4px;
  transform: rotate(90deg);
  width: 10px;
  height: 10px;
  mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewBox='0 0 24 24'%3E%3Cpath d='m9 18 6-6-6-6'/%3E%3C/svg%3E")
    no-repeat;
  mask-size: 100% 100%;
  background-color: currentColor;
}

.navbar__logo {
  margin-right: 0.75rem;
}

@media (min-width: 997px) {
  .navbar__brand {
    width: calc(
      var(--doc-sidebar-width) - var(--ifm-navbar-padding-horizontal)
    );
    box-shadow: 1px 0 0 0 var(--ifm-toc-border-color);
  }
}

@media (max-width: 996px) {
  .navbar__inner .navbar__brand {
    position: relative;
    margin: auto;
    left: -1rem;
  }
}

.navbar__toggle {
  & svg {
    display: none;
  }

  &::after {
    content: '';
    width: 24px;
    height: 24px;
    mask: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' stroke='currentColor' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' viewBox='0 0 24 24'%3E%3Cpath d='M21 6H3M15 12H3M17 18H3'/%3E%3C/svg%3E")
      no-repeat;
    background-color: currentColor;
  }
}

.navbar-social-link {
  &::before {
    content: '';
    display: flex;
    background-color: var(--ifm-navbar-link-color);
    transition: background-color var(--ifm-transition-fast)
      var(--ifm-transition-timing-default);
  }

  &:hover::before {
    background-color: var(--ifm-navbar-link-hover-color);
  }
}

.navbar-social-link-x::before {
  width: 18px;
  height: 18px;
  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M18.901 1.153h3.68l-8.04 9.19L24 22.846h-7.406l-5.8-7.584-6.638 7.584H.474l8.6-9.83L0 1.154h7.594l5.243 6.932ZM17.61 20.644h2.039L6.486 3.24H4.298Z'/%3E%3C/svg%3E");
}

.navbar-social-link-github::before {
  width: 20px;
  height: 20px;
  mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12'/%3E%3C/svg%3E");
}

.theme-doc-sidebar-menu {
  margin-right: var(--ifm-menu-link-padding-horizontal);
}
/* ... */

